--- a/app/src/main/res/layout/polylines_demo.xml
+++ b/app/src/main/res/layout/polylines_demo.xml
@@ -18,96 +18,21 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TableLayout
+    <CheckBox
+        android:id="@+id/checkBox1"
+        android:layout_gravity="bottom"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:stretchColumns="1">
-
-        <TableRow
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical">
-            <TextView android:text="@string/hue" />
-            <SeekBar android:id="@+id/hueSeekBar" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical">
-            <TextView android:text="@string/alpha" />
-            <SeekBar android:id="@+id/alphaSeekBar" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical">
-            <TextView android:text="@string/width" />
-            <SeekBar android:id="@+id/widthSeekBar" />
-        </TableRow>
-
-    </TableLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:text="@string/start_cap"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <Spinner
-            android:id="@+id/startCapSpinner"
-            android:spinnerMode="dropdown"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
-        <TextView
-            android:text="@string/end_cap"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        <Spinner
-            android:id="@+id/endCapSpinner"
-            android:spinnerMode="dropdown"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:text="@string/joint_type"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        <Spinner
-            android:id="@+id/jointTypeSpinner"
-            android:spinnerMode="dropdown"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
-        <TextView
-            android:text="@string/pattern"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        <Spinner
-            android:id="@+id/patternSpinner"
-            android:spinnerMode="dropdown"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
-    </LinearLayout>
+        android:onClick="showRuta1"
+        android:text="@string/ruta_1" />
 
     <CheckBox
-        android:id="@+id/toggleClickability"
-        android:layout_width="wrap_content"
+        android:id="@+id/checkBox2"
+        style="@android:style/Widget.Holo.Light.CompoundButton.CheckBox"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:checked="false"
-        android:onClick="toggleClickability"
-        android:text="@string/clickable" />
+        android:onClick="showRuta2"
+        android:text="@string/ruta_2" />
 
     <fragment
         android:id="@+id/map"
