--- a/app/src/main/res/layout/polylines_demo.xml
+++ b/app/src/main/res/layout/polylines_demo.xml
@@ -20,11 +20,12 @@
 
     <CheckBox
         android:id="@+id/checkBox1"
-        android:layout_gravity="bottom"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
         android:onClick="showRuta1"
-        android:text="@string/ruta_1" />
+        android:text="@string/ruta_1"
+        android:textSize="24sp" />
 
     <CheckBox
         android:id="@+id/checkBox2"
@@ -32,7 +33,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="showRuta2"
-        android:text="@string/ruta_2" />
+        android:text="@string/ruta_2"
+        android:textSize="24sp" />
 
     <fragment
         android:id="@+id/map"
